#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[workspace]
members = ["zenoh-bridge-mqtt", "zenoh-plugin-mqtt"]
resolver = "2"

[workspace.package]
authors = ["Julien Enoch <julien@enoch.fr>"]
categories = ["network-programming"]
edition = "2021"
homepage = "http://zenoh.io"
license = "EPL-2.0 OR Apache-2.0"
repository = "https://github.com/eclipse-zenoh/zenoh-plugin-mqtt"
version = "1.7.2"

[workspace.dependencies]
async-channel = "2.3.1"
async-trait = "0.1.83"
base64 = "0.22.1"
clap = "3.2.23"
derivative = "2.2.0"
flume = "0.11"
futures = "0.3.26"
git-version = "0.3.5"
hex = "0.4.3"
lazy_static = "1.4.0"
ntex = { version = "=2.7.0", features = ["tokio", "rustls"] }
ntex-bytes = "=0.1.28"
ntex-io = "=2.14.0"
ntex-mqtt = "=3.1.0"
ntex-net = "=2.8.1"
ntex-tls = "=2.2.0"
ntex-service = "=3.5.0"
regex = "1.7.1"
rustc_version = "0.4"
rustls = { version = "0.23.13", default-features = false, features = ["ring"] }
rustls-pemfile = "2.0.0"
rustls-pki-types = "1.1.0"
secrecy = { version = "0.8.0", features = ["alloc", "serde"] }
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", default-features = false } # Default features are disabled due to some crates' requirements
toml_datetime = "0.7.1"
toml_parser = "1.0.2"
tracing = "0.1"
zenoh = { version = "1.7.2", features = [
  "plugins",
  "unstable",
  "internal",
  "internal_config",

], git = "https://github.com/eclipse-zenoh/zenoh.git" , branch = "main" }
zenoh-config = { version = "1.7.2", default-features = false, git = "https://github.com/eclipse-zenoh/zenoh.git" , branch = "main" }
zenoh-ext = { version = "1.7.2", features = [
  "unstable",
], git = "https://github.com/eclipse-zenoh/zenoh.git" , branch = "main" }
zenoh-plugin-mqtt = { version = "1.7.2", path = "zenoh-plugin-mqtt/", default-features = false }
zenoh-plugin-rest = { version = "1.7.2", default-features = false, features = [
  "static_plugin",
], git = "https://github.com/eclipse-zenoh/zenoh.git" , branch = "main" }
zenoh-plugin-trait = { version = "1.7.2", default-features = false, git = "https://github.com/eclipse-zenoh/zenoh.git" , branch = "main" }
zenoh-pinned-deps-1-75 = { version = "1.7.2", default-features = false, git = "https://github.com/eclipse-zenoh/zenoh.git" , branch = "main" }

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
panic = "abort"
