#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
name = "zenoh-bridge-mqtt"
version = "0.7.0-rc"
authors = [
    "Julien Enoch <julien@enoch.fr>",
]
edition = "2018"
repository = "https://github.com/eclipse-zenoh/zenoh-plugin-mqtt"
homepage = "http://zenoh.io"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh bridge for MQTT"

[dependencies]
clap = "3.2.12"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4"
serde_json = "1.0.71"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh", branch = "new-buffers", features = ["unstable"] }
zenoh-plugin-rest = { git = "https://github.com/eclipse-zenoh/zenoh", branch = "new-buffers", default-features = false }
zenoh-plugin-trait = { git = "https://github.com/eclipse-zenoh/zenoh", branch = "new-buffers", default-features = false }
zplugin-mqtt = { path = "../zplugin-mqtt", default-features = false }

[dependencies.async-std]
version = "=1.12.0"
features = ["unstable", "attributes"]

[[bin]]
name = "zenoh-bridge-mqtt"
path = "src/main.rs"

[package.metadata.deb]
name = "zenoh-bridge-mqtt"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2017, 2022 ZettaScale Technology Inc."
section = "net"
license-file = ["../LICENSE", "0"]
depends = "$auto"
maintainer-scripts = ".deb"
assets = [
    # binary
    [
        "target/release/zenoh-bridge-mqtt",
        "/usr/bin/",
        "755",
    ],
    # config file
    [
        "../DEFAULT_CONFIG.json5",
        "/etc/zenoh-bridge-mqtt/conf.json5",
        "644",
    ],
    # service
    [
        ".service/zenoh-bridge-mqtt.service",
        "/lib/systemd/system/zenoh-bridge-mqtt.service",
        "644",
    ],
]
