[package]
name = "zenoh-plugin-mqtt"
description = "Zenoh plugin for MQTT"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.repository]
workspace = true

[package.homepage]
workspace = true

[package.license]
workspace = true

[package.categories]
workspace = true

[package.metadata]
[package.metadata.deb]
name = "zenoh-plugin-mqtt"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2017, 2020 ADLINK Technology Inc."
section = "net"
license-file = [ "../LICENSE", "0" ]
depends = "zenohd (=0.11.0-dev-59-g04aa07b)"

[lib]
name = "zenoh_plugin_mqtt"
crate-type = [ "cdylib", "rlib" ]

[features]
default = [ "no_mangle" ]
no_mangle = []
stats = [ "zenoh/stats" ]

[dependencies]
[dependencies.async-channel]
workspace = true

[dependencies.async-std]
workspace = true
features = [ "unstable", "attributes" ]

[dependencies.async-trait]
workspace = true

[dependencies.base64]
workspace = true

[dependencies.derivative]
workspace = true

[dependencies.env_logger]
workspace = true

[dependencies.flume]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.git-version]
workspace = true

[dependencies.hex]
workspace = true

[dependencies.lazy_static]
workspace = true

[dependencies.log]
workspace = true

[dependencies.ntex]
workspace = true
features = [ "async-std", "rustls" ]

[dependencies.ntex-mqtt]
workspace = true

[dependencies.ntex-tls]
workspace = true

[dependencies.regex]
workspace = true

[dependencies.rustls]
workspace = true

[dependencies.rustls-pemfile]
workspace = true

[dependencies.secrecy]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.zenoh]
workspace = true

[dependencies.zenoh-collections]
workspace = true

[dependencies.zenoh-core]
workspace = true

[dependencies.zenoh-ext]
workspace = true

[dependencies.zenoh-plugin-trait]
workspace = true

[build-dependencies]
[build-dependencies.rustc_version]
workspace = true