#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
#
[package]
name = "zenoh-plugin-mqtt"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
description = "Zenoh plugin for MQTT"

[lib]
name = "zenoh_plugin_mqtt"
crate-type = ["cdylib", "rlib"]

[features]
default = ["dynamic_plugin"]
dynamic_plugin = []
stats = ["zenoh/stats"]

[dependencies]
async-channel = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
derivative = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
git-version = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ntex = { workspace = true }
ntex-mqtt = { workspace = true }
ntex-tls = { workspace = true }
regex = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zenoh = { workspace = true }
zenoh-config = { workspace = true }
zenoh-plugin-trait = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[package.metadata.deb]
name = "zenoh-plugin-mqtt"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2017, 2020 ADLINK Technology Inc."
section = "net"
license-file = ["../LICENSE", "0"]
depends = "zenohd (=1.0.2)"
